--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,20 @@
     box-sizing: border-box;
 }
 
+:root {
+    --deep-dark: rgb(26, 26, 26);
+    --light-dark: rgb(79, 82, 92);
+    --light-blue: rgb(0, 132, 255);
+    --light-green: rgb(38, 175, 38);
+    --light-red: rgb(230, 88, 63);
+    --light: rgb(245, 245, 245);
+}
+
 body {
     height: 100vh;
     font-size: 62.5%;
     font-family: 'Hind Guntur', sans-serif;
-    background: #222;
+    background: var(--deep-dark);
 }
 
 h1 {
@@ -17,7 +26,7 @@ h1 {
     margin-top: 1rem;
     margin-bottom: .5rem;
     text-align: center;
-    color: #fff;
+    color: var(--light);
 }
 
 .todo {
@@ -29,7 +38,7 @@ h1 {
 }
 
 .title {
-    color: rgb(38, 175, 38)
+    color: var(--light-green);
 }
 
 
@@ -37,7 +46,7 @@ h1 {
     padding: .2em .4em;
     width: 450px;
     height: 30px;
-    background-color: #fff;
+    background-color: var(--light);
     border: none;
     border-radius: 25px;
     outline: none;
@@ -50,8 +59,8 @@ h1 {
     height: 30px;
     border: none;
     border-radius: 25px;
-    background-color: rgb(38, 175, 38);
-    color: #fff;
+    background-color: var(--light-green);
+    color: var(--light);
     cursor: pointer;
 }
 
@@ -64,7 +73,7 @@ h1 {
 }
 
 .todoList h3 {
-    color: #ddd;
+    color: var(--light);
     font-size: 1.2rem;
     text-transform: uppercase;
 }
@@ -72,23 +81,23 @@ h1 {
 .alertInfo {
     margin-top: .25rem;
     font-size: 1.4rem;
-    color:#ddd;
-    color: rgb(38, 175, 38);
+    color: var(--light);
+    color: var(--light-green);
 }
 
 .item {
     padding: .25rem .5rem;
     margin-bottom: 1rem;
-    /* background: rgb(70, 68, 68); */
-    border-bottom: 4px solid #fff;
+    /* background: var(--light-dark); */
+    border-bottom: 4px solid var(--light);
 }
 
 .item_input {
     width: 300px;
     outline: none;
-    border:none;
+    border: none;
     font-size: 1.6rem;
-    color:#ddd;
+    color: var(--light);
     background: none;
 }
 
@@ -101,7 +110,7 @@ h1 {
 }
 
 .item button:hover {
-    color: #ddd;
+    color: var(--light);
 }
 
 .complete {
@@ -110,9 +119,9 @@ h1 {
 
 .edit {
     font-weight: bold;
-    color: rgb(15, 179, 69);
+    color: var(--light-green);
 }
 
 .delete {
-    color: tomato;
+    color: var(--light-red);
 }
