--- a/css/style.css
+++ b/css/style.css
@@ -132,3 +132,24 @@ h1 {
     text-decoration: line-through;
     font-style: italic;
 }
+
+@media (max-width: 576px) {
+    h1 {
+        font-size: 2.2rem;
+        margin-top: 1.5rem;
+        margin-bottom: .25rem;
+    }
+
+    .todoInput {
+        width: 230px;
+    }
+
+    .item_input {
+        width: 115px;
+        font-size: 1.1rem;
+    }
+
+    .completed {
+        font-size: 1rem;
+    }
+}
